fix(BI-147 BI-152): update dark theme styles for improved modal visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,7 +94,7 @@
     @apply focus:ring-blue-500 disabled:bg-gray-100 disabled:text-gray-500 disabled:opacity-60;
   }
 
-  .dark {
+  [data-theme='dark'] {
     .bg-main {
       @apply bg-gray-900;
     }
@@ -155,6 +155,14 @@
       button {
         @apply text-gray-500 hover:text-white bg-gray-800 hover:bg-gray-700;
       }
+    }
+
+    .swal2-modal {
+      background-color: var(--color-gray-800) !important;
+      color: var(--color-white) !important;
+    }
+    #swal2-title {
+      color: var(--color-white) !important;
     }
   }
 }
